# jenkins_docker

./: .pre-commit-config.yaml  Dockerfile  Jenkinsfile  app.py  pyproject.toml
